# data

./: pyproject.toml
covid-19/: get_data.ipynb
tweets/santiago_j_s/: tweets.db  tweets.ipynb  tweets.json
