[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Santiago Santana <santana.santiago@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"
numpy = "^1.17"
pandas = "^1.0"
scipy = "^1.3"
matplotlib = "^3.1"
ipython = "^7.10"
simpy = "^3.0"
nose = "^1.3"
jupyterlab = "^1.2"
seaborn = "^0.9.0"
requests = "^2.22"
lxml = "^4.4"
tables = "^3.6"
cvxopt = "^1.2"
h5py = "^2.10"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
